# claw-daw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  audioop.py  pyproject.toml
claw_daw/: __init__.py  __main__.py  quality_workflow.py
demos/: arrange_spec_example.yaml
docs/: AGENT_COOKBOOK.md  AGENT_PLAYBOOK.md  ARCH_STYLEPACK_PIPELINE.md  CNAME  COMMANDS.md  ITER_1_FEATURES.md  ITER_1_STATUS.md  ITER_2_FEATURES.md  ITER_2_STATUS.md  LAUNCH_PLAN.md  NEXT_FEATURES.md  PLAN.md  README.md  SOUNDFONT.md  SPECTROGRAM.md  STAGE_BEFORE_AFTER.md  TODO_TUI_UX.md  TROUBLESHOOTING.md  USER_GUIDE.md  USER_STORY.md  checklist.md  heartbeat.md  index.html  install.sh  install_mac.sh  install_win.ps1  llms.txt  robots.txt  sitemap.xml  skill.json  skill.md
scripts/: install.sh  install_win.ps1
templates/: trap_1min.txt  trap_instrument_lead.txt
tests/: smoke_sampler_render.py  test_arrange_spec_compiler.py  test_bus_routing.py  test_drum_macros.py  test_drum_render_sanity.py  test_genre_packs_v1.py  test_headless_contract.py  test_humanize_and_variation.py  test_instruments.py  test_mastering_preset_override.py  test_metering.py  test_mix_sanity.py  test_model_and_midi.py  test_prefix_normalization.py  test_prompt_pipeline.py  test_quality_workflow.py  test_region_slice_preserves_drum_roles.py  test_region_slice_preserves_meta.py  test_sample_packs.py  test_smoke.py  test_stylepack_fail_closed.py  test_stylepacks_pipeline.py  test_timecode_and_transform.py  test_validation_and_limits.py
tools/: 2026-02-03_atl_trap_150_v1.txt  2026-02-03_atl_trap_160_v1.txt  2026-02-03_edm_splice_v1.txt  2026-02-03_house_splice_124_v1.txt  2026-02-03_house_splice_124_v2.txt  2026-02-03_trap_150_v1.txt  2026-02-03_trap_150_v2.txt  2026-02-04_atlanta_dna_140_v1.txt  2026-02-04_atlanta_dna_140_v2.mix.json  2026-02-04_atlanta_dna_140_v2_mix.txt  2026-02-04_atlanta_dna_140_v3.mix.json  2026-02-04_atlanta_dna_140_v3_mix.txt  2026-02-04_atlanta_dna_140_v4.mix.json  2026-02-04_atlanta_dna_140_v4_mix.txt  2026-02-04_deephouse_122_v3.txt  2026-02-04_deephouse_splice_122_v1.txt  2026-02-04_deephouse_splice_122_v2.txt  2026-02-04_deephouse_splice_122_v3.txt  (+65 more)
(+88 files in other folders)
