[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claw-daw"
version = "0.0.0"
description = "TUI-based MIDI DAW (offline MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BigBro" }]

dependencies = [
  "mido>=1.3.0",
  "python-rtmidi>=1.5.0",
  "pyfluidsynth>=1.3.3",
]

[project.scripts]
claw-daw = "claw_daw.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
