[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claw-daw"
version = "0.2.0"
description = "Offline, deterministic, terminal-first MIDI DAW for agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BigBro" }]
keywords = ["midi", "daw", "tui", "music", "audio", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
  "mido>=1.3.0",
  "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://www.clawdaw.com/"
Documentation = "https://www.clawdaw.com/USER_GUIDE.md"
Repository = "https://github.com/sdiaoune/claw-daw"
Changelog = "https://github.com/sdiaoune/claw-daw/blob/main/CHANGELOG.md"

[project.scripts]
claw-daw = "claw_daw.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
include = ["claw_daw/**"]

[tool.hatch.build.targets.sdist]
include = [
  "claw_daw/**",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]
